FindBugs: Method invokes inefficient Number ctor.